--- a/css/style.css
+++ b/css/style.css
@@ -29,12 +29,22 @@ html{
   background:linear-gradient(135deg, var(--primary-light-2), var(--primary-dark-2))
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 a {
   color: #000;
 }
 
 label {
   color:var(--secondary-light)
+}
+
+.secondary-2{
+  color: var(--secondary-light-2)
 }
 
 .cta-btn {
@@ -51,6 +61,10 @@ label {
   background: var(--secondary-light-2);
   cursor: pointer;
   transition: background 0.3s ease;
+}
+
+.form-btn {
+  height: auto;
 }
 
 .slideshow {
@@ -130,12 +144,12 @@ label {
 }
 
 
-#title-container, #budget-title-container {
+#title-container, #budget-title-container, #advert-title-container {
   padding: 1 em;
   color: var(--secondary-light-2)
 }
 
-#budget-container, #contact-data-container {
+#budget-container, #contact-data-container, #advert-container {
   padding: 1em 1em 2em 1em;
 }
 
@@ -147,4 +161,23 @@ label {
   border: none;
   border-bottom: 1px solid var(--secondary-light);
   color: var(--secondary-light-2)
+}
+
+:is(#contact-data, #budget) option {
+  background: var(--primary-dark);
+}
+
+#advert-desc :is(h1,h2, a) {
+  color: var(--secondary-light-2)
+}
+
+#advert-desc :is(h3,h4) {
+  color: var(--secondary-light)
+}
+
+a:hover{
+  cursor: pointer;
+  filter: brightness(1.3);
+
+  transition: filter 0.2s ease;
 }
