messages for product and extras now appear and disappear from page

--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -78,7 +78,8 @@
             </select>
             <br>
             <br>
-            <label for="extras">Extras</label> <br>
+            <label for="extras">Extras</label>
+            <br>
             <input type="checkbox" name="revisions" id="revisions">
             <label for="revisions">Revisiones de contenido</label>
             &emsp;
@@ -95,8 +96,8 @@
             </div>
             <br>
             <br>
-            <input type="checkbox" name="t-and-a" id="t-and-a">
-            <label for="t-and-a">He leído y comprendo la <a style="color:var(--secondary-light-2)">política de privacidad</a>.</label>
+            <input type="checkbox" name="t-and-c" id="t-and-c">
+            <label for="t-and-c">He leído y comprendo la <a style="color:var(--secondary-light-2)">política de privacidad</a>.</label>
             <br>
             <br>
             <button type="submit" class="cta-btn form-btn">Enviar formulario</button>
