budget finished --validation next?

--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -92,14 +92,15 @@
             <br>
             <section id="budget-final" style="position:relative; color:#058F62; margin:2em; min-height:10em">
               <h3 class="secondary-2">PRESUPUESTO FINAL</h3>
-              <div id="concepts">
-                <h4>CONCEPTO</h4>
-              </div>
-              <div id="pricing">
-                <h4>PRECIO</h4>
-              </div>
-              <div id="total-price">
-                <h3>TOTAL:</h3>
+              <div class="grid-container">
+                <div id="concepts" style="float:left">
+                  <h4>CONCEPTO</h4>
+                </div>
+                <div id="pricing" style="float:right">
+                  <h4>PRECIO</h4>
+                </div>
+                <div id="total-price">
+                </div>
               </div>
             </section>
             <br>
