--- a/css/style.css
+++ b/css/style.css
@@ -182,3 +182,29 @@ a:hover{
 
   transition: filter 0.2s ease;
 }
+
+.grid-container {
+  display: grid;
+  gap: 30px;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: auto 100px;
+  justify-content: center;
+}
+
+#concepts {
+  display:flex;
+  align-items:start;
+  flex-direction: column;
+}
+
+#pricing{
+  display:flex;
+  align-items:end;
+  flex-direction: column;
+}
+
+#total-price {
+  grid-column: 1/3;
+  display: flex;
+  justify-content: end;
+}
