--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,8 @@
 }
 
 html{
-  background:linear-gradient(135deg, var(--primary-light-2), var(--primary-dark-2))
+  background:linear-gradient(135deg, var(--primary-light-2), var(--primary-dark-2));
+  width: 99vw;
 }
 
 input::-webkit-outer-spin-button,
@@ -186,7 +187,7 @@ a:hover{
 .grid-container {
   display: grid;
   gap: 30px;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 75% 25%;
   grid-template-rows: auto 100px;
   justify-content: center;
 }
