--- a/css/style.css
+++ b/css/style.css
@@ -124,14 +124,14 @@ label {
 
 
 .slideshow li:nth-child(1) span { 
-    background-image: url("https://uploads-ssl.webflow.com/5976a3655fcd654cb3d604ca/5bfa14d04ae3429879830ee4_home-hero.jpg"); 
+    background-image: url("../images/profile-pic.jpg"); 
 }
 .slideshow li:nth-child(2) span { 
-    background-image: url("https://uploads-ssl.webflow.com/5976a3655fcd654cb3d604ca/5c00c9ecd82b40364fc97f4b_bridge.jpg");
+    background-image: url("../images/products/reboot-driver.png");
     animation-delay: 6s; 
 }
 .slideshow li:nth-child(3) span { 
-    background-image: url("https://uploads-ssl.webflow.com/5976a3655fcd654cb3d604ca/5c00c9963ea913260bb41b0e_powerlines.jpg");
+    background-image: url("../images/code.png");
     animation-delay: 12s; 
 }
 .slideshow li:nth-child(4) span { 
