type on reboot driver fixed class royale started

--- a/views/products/reboot-driver.html
+++ b/views/products/reboot-driver.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Spectral&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../../css/style.css">
-  <title>Adrian Diez</title>
+  <title>Reboot Driver - Adrian Diez</title>
 </head>
 <body style="margin:0">
   <header>
@@ -48,7 +48,7 @@
       </h4>
       <h4>
         El objetivo del juego es llegar a una distancia determinada (indicada en la parte superior derecha de la pantalla)
-        antes de que se acabe el tiempo. Chocar con algún vehículo, como en la vida real, nos ahrá perder la partida.
+        antes de que se acabe el tiempo. Chocar con algún vehículo, como en la vida real, nos hará perder la partida.
       </h4>
       <a target="_blank" href="https://jonathanpmelian.github.io/RebootDriver/">
         <div class="cta-btn reboot" style="color:#000">¡Pruébalo aquí!</div>
