--- a/views/products/class-royale.html
+++ b/views/products/class-royale.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Spectral&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../../css/style.css">
-  <title>Reboot Driver - Class Royale</title>
+  <title>Adrian Diez - Class Royale</title>
 </head>
 <body style="margin:0">
   <header>
@@ -60,6 +60,11 @@
       <h4>
         En cuanto al componente visual, se usó Figma para un primer diseño de las principales vistas, y Vuetify para llevarlas a cabo en 
         el código.
+      </h4>
+      <h4>
+        RETOS Y LOGROS
+
+        Redactar
       </h4>
       <a target="_blank" href="https://jonathanpmelian.github.io/RebootDriver/">
         <div class="cta-btn reboot" style="color:#000">¡Pruébalo aquí!</div>
