INDEX.HTML -Ajax and JQuery added as scripts
STYLES.CSS
-Added a product picture

INDEX.JS
-Added Ajax function to load news in index.html

NEWS.JSON
-Added three legitimate news

PRODUCTS
-Changed ids to their proper function

--- a/views/products/reboot-driver.html
+++ b/views/products/reboot-driver.html
@@ -22,8 +22,8 @@
       </div>
       <div id="navbar">
         <ul style="display: flex; flex-direction: row; list-style-type: none; gap:10px;">
-          <li style="color:var(--secondary-light-2)"><strong>Home</strong></li>
-          <li>Work</li>
+          <li>Home</li>
+          <li style="color:var(--secondary-light-2)"><strong>Work</strong></li>
           <li>About</li>
         </ul>
 
@@ -31,11 +31,11 @@
     </div>
   </header>
   
-  <section id="news"  style="width:80vw;padding: 2rem;background:#021C2C;margin-left: 10vw;
+  <section id="product-content-wrapper"  style="width:80vw;padding: 2rem;background:#021C2C;margin-left: 10vw;
   margin-top: 40px;box-shadow:-20px -20px 0px 0px #002e1fa3;color:#058F62">
     <h1 style="color:#0AC88A">Reboot Driver</h1>
     <div>
-      <h2 id="news-title" style="color:#0AC88A">
+      <h2 id="product-title" style="color:#0AC88A">
         Videojuego de conducción al más puro estilo arcade
       </h2>
       <h4>
