--- a/views/products/class-royale.html
+++ b/views/products/class-royale.html
@@ -31,11 +31,11 @@
     </div>
   </header>
   
-  <section id="news"  style="width:80vw;padding: 2rem;background:#021C2C;margin-left: 10vw;
+  <section id="product-content-wrapper"  style="width:80vw;padding: 2rem;background:#021C2C;margin-left: 10vw;
   margin-top: 40px;box-shadow:-20px -20px 0px 0px #002e1fa3;color:#058F62">
     <h1 style="color:#0AC88A">Class Royale</h1>
     <div>
-      <h2 id="news-title" style="color:#0AC88A">
+      <h2 id="product-title" style="color:#0AC88A">
         Aplicación de gestión de aulas con componente de gamificación
       </h2>
       <h4>
