--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -93,7 +93,7 @@
               <br>
               <br>
               <section id="budget-final" style="position:relative; color:#058F62; margin:2em; min-height:10em">
-                <h3 class="secondary-2">PRESUPUESTO FINAL</h3>
+                <h3 class="secondary-l-2">PRESUPUESTO FINAL</h3>
                 <div class="grid-container">
                   <div id="concepts" style="float:left">
                     <h4>CONCEPTO</h4>
