--- a/views/products/reboot-driver.html
+++ b/views/products/reboot-driver.html
@@ -22,9 +22,9 @@
       </div>
       <div id="navbar">
         <ul style="display: flex; flex-direction: row; list-style-type: none; gap:10px;">
-          <li>Home</li>
-          <li style="color:var(--secondary-light-2)"><strong>Work</strong></li>
-          <li>About</li>
+          <a href="#" class="header-tag secondary-l"><li><strong>Home</strong></li></a>
+          <a href="views/galeria.html" class="header-tag secondary-l-2"><li>Work</li></a>
+          <a href="views/contacto.html" class="header-tag secondary-l"><li>About</li></a>
         </ul>
 
       </div>
@@ -50,7 +50,7 @@
         El objetivo del juego es llegar a una distancia determinada (indicada en la parte superior derecha de la pantalla)
         antes de que se acabe el tiempo. Chocar con algún vehículo, como en la vida real, nos hará perder la partida.
       </h4>
-      <a target="_blank" href="https://jonathanpmelian.github.io/RebootDriver/">
+      <a target="_blank" href="https://adrian-diez.github.io/RebootDriver/">
         <div class="cta-btn reboot" style="color:#000">¡Pruébalo aquí!</div>
       </a>
 
