--- a/views/products/class-royale.html
+++ b/views/products/class-royale.html
@@ -22,9 +22,9 @@
       </div>
       <div id="navbar">
         <ul style="display: flex; flex-direction: row; list-style-type: none; gap:10px;">
-            <li>Home</li>
-            <li style="color:var(--secondary-light-2)"><strong>Work</strong></li>
-          <li>About</li>
+          <a href="../../index.html" class="header-tag secondary-l"><li><strong>Home</strong></li></a>
+          <a href="../galeria.html" class="header-tag secondary-l-2"><li>Work</li></a>
+          <a href="../contacto.html" class="header-tag secondary-l"><li>About</li></a>
         </ul>
 
       </div>
