--- a/views/products/reboot-driver.html
+++ b/views/products/reboot-driver.html
@@ -22,9 +22,9 @@
       </div>
       <div id="navbar">
         <ul style="display: flex; flex-direction: row; list-style-type: none; gap:10px;">
-          <a href="#" class="header-tag secondary-l"><li><strong>Home</strong></li></a>
-          <a href="views/galeria.html" class="header-tag secondary-l-2"><li>Work</li></a>
-          <a href="views/contacto.html" class="header-tag secondary-l"><li>About</li></a>
+          <a href="../../index.html" class="header-tag secondary-l"><li><strong>Home</strong></li></a>
+          <a href="../galeria.html" class="header-tag secondary-l-2"><li>Work</li></a>
+          <a href="../contacto.html" class="header-tag secondary-l"><li>About</li></a>
         </ul>
 
       </div>
