--- a/views/contacto.html
+++ b/views/contacto.html
@@ -9,6 +9,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Spectral&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/style.css">
   <script src="../js/map.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqBTVwOoqfnQIIqvdNoxGoevuojxxjhRs&callback=initMap">
+  </script>
   <title>Adrian Diez - About</title>
   
 </head>
@@ -36,6 +39,8 @@
   <section id="about-wrapper"  style="width:80vw;padding: 2rem;background:#021C2C;margin-left: 10vw;
   margin-top: 40px;box-shadow:-20px -20px 0px 0px #002e1fa3;color:#058F62">
     <h1 style="color:#0AC88A">Contacto</h1>
+    <input type="text" id="address" placeholder="Escribe tu dirección aquí">
+    <input type="button" value="Calcular ruta" onclick="codeAddress()">
     <div id="map" style="position:relative"></div>
   </section>
   <footer>
@@ -70,8 +75,7 @@
       
     </div>
   </footer>
-  <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqBTVwOoqfnQIIqvdNoxGoevuojxxjhRs&callback=initMap">
-  </script>
+
 
 </body>
 </html>
