--- a/views/contacto.html
+++ b/views/contacto.html
@@ -41,8 +41,8 @@
     <h1 style="color:#0AC88A">Contacto</h1>
     <div style="margin-bottom:20px">
       <input type="text" id="address" placeholder="Escribe tu dirección aquí">
-      <input type="button" value="Direccion" onclick="codeAddress()">
-      <input type="button" value="Calcular ruta" onclick="calculateRoute()">
+      <input type="button" value="Hallar dirección" onclick="codeAddress()">
+      <input type="button" id="route-btn" value="Calcular ruta"  style="display:none" onclick="calculateRoute()">
     </div>
     <div id="map" style="position:relative"></div>
   </section>
