--- a/views/presupuesto.html
+++ b/views/presupuesto.html
@@ -60,8 +60,8 @@
           <div id="budget-title-container">
             <h1>¿Qué necesitas?</h1>
           </div>
-          <div id="budget-form-container" class="budget-form">
-            <form action="#">
+          <div id="budget-form-container">
+            <form action="#" id="budget-form">
               <label for="product">Producto</label>
               <select name="product" id="product">
                 <option value="default" selected disabled>Selecciona una opción</option>
@@ -163,9 +163,9 @@
           </p>
         </div>
         <div id="footer-logos" style="display: flex;">
-          <img src="images/socials/instagram.svg" alt="logo instagram" style="height:30px">
-          <img src="images/socials/twitter.svg" alt="logo twitter" style="height:30px">
-          <img src="images/socials/github.svg" alt="logo github" style="height:30px">
+          <img src="../../images/socials/instagram.svg" alt="logo instagram" style="height:30px">
+          <img src="../../images/socials/twitter.svg" alt="logo twitter" style="height:30px">
+          <img src="../../images/socials/github.svg" alt="logo github" style="height:30px">
         </div>
         
       </div>
